package com.programacaoiii.model;

public interface Relatorio {
	public void verRelatorioFinanceiro();
	public void verRelatorioEstoque();
	public void verRelatorioOS();
}
